--- a/CSharp_Lab4/PersonListWindow.xaml
+++ b/CSharp_Lab4/PersonListWindow.xaml
@@ -4,9 +4,21 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CSharp_Lab4"
-        mc:Ignorable="d"
-        Title="Person List" Height="300" Width="400">
+        Title="Person List" Height="300" Width="501">
     <Grid>
-        <DataGrid ItemsSource="{Binding People}" AutoGenerateColumns="True" Margin="5"/>
+        <DataGrid ItemsSource="{Binding CollectionView}"
+          AutoGenerateColumns="False"
+          IsReadOnly="True" SelectionChanged="DataGrid_SelectionChanged">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="First Name" Binding="{Binding FirstName}" />
+                <DataGridTextColumn Header="Last Name" Binding="{Binding LastName}" />
+                <DataGridTextColumn Header="Email" Binding="{Binding Email}" />
+                <DataGridTextColumn Header="Date of Birth" Binding="{Binding DateOfBirth}" />
+                <DataGridTextColumn Header="Is Adult" Binding="{Binding IsAdult}" />
+                <DataGridTextColumn Header="Sun Sign" Binding="{Binding SunSign}" />
+                <DataGridTextColumn Header="Chinese Sign" Binding="{Binding ChineseSign}" />
+                <DataGridTextColumn Header="Is Birthday" Binding="{Binding IsBirthday}" />
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
